Spacing fixes

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,14 +4,10 @@ body {
     cursor: default;
     overflow-y: hidden;
 
-    margin: 0px;
-    overflow: hidden;
-    /*background-image: -webkit-linear-gradient(#16222A,#3A6073);*/
-    /*background-image: -moz-linear-gradient(#16222A,#3A6073);*/
-    /*background-image: -o-linear-gradient(#16222A,#3A6073);*/
-    /*background-image: linear-gradient(#16222A,#3A6073);*/
-
     /*center to outside*/
+    background: -webkit-radial-gradient(rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0, 0.3));
+    background: -o-radial-gradient(rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0, 0.3));
+    background: -moz-radial-gradient(rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0, 0.3));
     background: radial-gradient(rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0, 0.3));
 
 }
@@ -31,14 +27,14 @@ body {
 }
 
 #canvas {
-    /*position: static;*/
     margin: auto;
     padding: 0;
     position: absolute;
     top: 0;
-    width: 100vw;
+    left: 0;
+    /* 100vw minus sidebar*/
+    width: 90vw;
     height: 100vh;
-    /*background-color: red;*/
 }
 
 #version {
